Bug 1167026 - Avoid division by zero when flattening a bezier curve segment with equal control points. r=bas